--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,93 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@300&display=swap');
 
 :root {
-    background-color: rgb(29, 26, 26);
+	background-color: rgb(29, 26, 26);
 }
 
-
-
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-size: 62.5%;
-    font-family: 'Poppins', sans-serif;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-size: 62.5%;
+	font-family: 'Poppins', sans-serif;
 }
 
 .play-title {
-    font-family: 'Press Start 2P', cursive;
+	font-family: 'Press Start 2P', cursive;
 
 }
 
 h1 {
-    font-size: 5.4rem;
-    color: white;
-    margin-bottom: 5rem;
+	font-size: 5.4rem;
+	color: white;
+	margin-bottom: 5rem;
 }
 
 h2 {
-    font-size: 4.2rem;
-    margin-bottom: 4rem;
+	font-size: 4.2rem;
+	margin-bottom: 4rem;
 }
 
 .container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 80rem;
-    margin: 0 auto;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	max-width: 80rem;
+	margin: 0 auto;
 }
 
 .flex-column {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .flex-center {
-    justify-content: center;
-    align-items: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .justify-center {
-    justify-content: center;
+	justify-content: center;
 }
 
 .text-center {
-    text-align: center;
+	text-align: center;
 }
 
 .hidden {
-    display: none;
+	display: none;
 }
 
 .btn {
-    font-size: 2.4rem;
-    padding: 2rem 0;
-    width: 35rem;
-    text-align: center;
-    margin-bottom: 1rem;
-    text-decoration: none;
-    color: white;
-    background: rgb(52, 155, 52);
-    border-radius: 4px;
+	font-size: 2.4rem;
+	padding: 2rem 0;
+	width: 35rem;
+	text-align: center;
+	margin-bottom: 1rem;
+	text-decoration: none;
+	color: white;
+	background: rgb(52, 155, 52);
+	border-radius: 4px;
 }
 
 .btn:hover {
-    cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(0, 0, 0, 0.0);
-    transition: transform 150ms;
-    transform: scale(1.03);
+	cursor: pointer;
+	box-shadow: 0 0.4rem 1.4rem 0 rgba(0, 0, 0, 0.0);
+	transition: transform 150ms;
+	transform: scale(1.03);
 }
 
 .btn[disabled]:hover {
-    cursor: not-allowed;
-    box-shadow: none;
-    transform: none;
+	cursor: not-allowed;
+	box-shadow: none;
+	transform: none;
 }
 
 .fa-crown {
-    font-size: 2.5rem;
-    margin-left: 1rem;
+	font-size: 2.5rem;
+	margin-left: 1rem;
 }
+
+/* End CSS */
+.end-form-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 30rem;
+}
+
+input {
+	margin-bottom: 1rem;
+	width: 20rem;
+	padding: 1.5rem;
+	font-size: 1.8rem;
+	border: none;
+	box-shadow: 0 0.1rem 1.4rem 0 rgba(0, 0, 0, 0.0);
+}
+
+input::placeholder {
+	color: #aaa;
+}
+
+#username {
+	margin-bottom: 3rem;
+	width: 100%;
+	outline: none;
+}
+
+#end-text {
+	font-size: 2.4rem;
+	color: white;
+	text-align: center;
+}
+
+#saveScoreBtn {
+	border: none;
+}
+
